# megagame-controller

./: .gitignore  .gitmodules  README.md  vetur.config.js
django/: actions.json  actions.py  main.py  poetry  pyproject.toml
django/backend/: asgi.py  settings.py  urls.py
django/backend/backend/: settings.py
django/bot/: decorators.py  services.py  settings.py  state.py  urls.py
django/bot/channels/: admin.py  models.py
django/bot/discord_channels/: models.py
django/bot/discord_guilds/: admin.py  apps.py  models.py  services.py
django/bot/discord_models/: admin.py  apps.py  models.py
django/bot/discord_roles/: admin.py  models.py
django/bot/plugins/: base.py  commands.py  events.py  help.py  system.py  test.py
django/bot/service/: Button.py  Dropdown.py  TaskHandler.py
django/bot/services/: Button.py  Dropdown.py  Payment.py  TaskHandler.py  Trade.py  utils.py
django/bot/users/: admin.py  apps.py  decorators.py  models.py  services.py
django/currencies/: admin.py  apps.py  models.py  plugin.py  services.py  tests.py  views.py
django/currencies/migrations/: 0001_initial.py  0002_initial.py  0003_alter_transaction_trade.py  0003_auto_20210822_2223.py  0003_auto_20211121_0701.py  0004_auto_20210827_2138.py  0004_trade_first_iteration.py  0005_auto_20210827_2303.py  0005_auto_20211123_0804.py  0006_alter_payment_fundraising_amount.py  0006_auto_20211021_1301.py  0007_auto_20211103_1740.py  0008_auto_20211104_0808.py  0009_auto_20211104_1046.py  0010_rename_price_payment_cost.py  0011_trade_locked_in.py  (+5 more)
django/currency/: admin.py  models.py  plugin.py  serializers.py  services.py  tests.py  views.py
django/id_emojis/: admin.py  apps.py  models.py
django/player/: admin.py  models.py  serializers.py  services.py  tests.py  views.py
django/players/: admin.py  apps.py  models.py  services.py  tests.py  views.py
django/responses/: admin.py  models.py  plugin.py
django/tasks/: admin.py  models.py  services.py
django/team/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
django/teams/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
(+129 files in other folders)
