[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Forest Anderson <forestkzanderson@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.3"
"discord.py" = {git = "https://github.com/Rapptz/discord.py.git", rev = "master"}
psutil = "^5.8.0"
tabulate = "^0.8.9"
djangorestframework = "^3.12.4"
drf-yasg = "^1.20.0"
django-extensions = "^3.1.3"
django-service-objects = "^0.7.0"
django-fsm = "^2.7.1"
pytest-django = "^4.4.0"
django-seed = {git = "https://github.com/Brobin/django-seed.git", rev = "0.3.0"}
psycopg2-binary = "^2.9.1"
rich = "^10.5.0"
channels = "^3.0.4"
channels-redis = "^3.3.0"
emojis = "^0.6.0"
dice = "^3.1.2"
sentry-sdk = "^1.3.1"
discord-sentry-reporting = "^2.0.4"
django-schema-graph = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
isort = "^5.9.2"
backtrace = {git = "https://github.com/AngelOnFira/backtrace.git", rev = "master"}
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
